ex2/testdata/parser/error/TestCases-error-st- exp.java
/**
 * Created by alka on 5/11/2017.
 */
class TestCaseserror {
    public static void main(String [] args)
    {
        int v;
	int a;

        v=10;    

        a+b;

	!a;

	-v;

	a[10];

	a.length;

	a.v;

	1.v;

	1.a();

	true;

	false;

	a;

	3;

	this;

	null;

	new int[1];

	(a);
    }
}
